add full request passing to food factory
